@@ -1,6 +1,6 @@
 # =============================================================================
 # 
-# @(#) $RCSfile: Makefile.am,v $ $Name:  $($Revision: 0.9.2.88 $) $Date: 2007/10/16 07:46:35 $
+# @(#) $RCSfile: Makefile.am,v $ $Name:  $($Revision: 0.9.2.89 $) $Date: 2007/11/06 10:27:03 $
 #
 # -----------------------------------------------------------------------------
 #
@@ -45,7 +45,7 @@
 #
 # -----------------------------------------------------------------------------
 #
-# Last Modified $Date: 2007/10/16 07:46:35 $ by $Author: brian $
+# Last Modified $Date: 2007/11/06 10:27:03 $ by $Author: brian $
 #
 # =============================================================================
 
@@ -2522,6 +2522,9 @@ include ../../am/man.am
 # =============================================================================
 #
 # $Log: Makefile.am,v $
+# Revision 0.9.2.89  2007/11/06 10:27:03  brian
+# - miscellaneous corrections
+#
 # Revision 0.9.2.88  2007/10/16 07:46:35  brian
 # - makefile corrections and additions
 #
