@@ -1,7 +1,7 @@
 % -*- texinfo -*- vim: ft=texinfo tw=100 nocin nosi
 % =========================================================================
 %
-% @(#) $Id: STREAMS.texi,v 0.9.2.38 2007/08/12 06:44:32 brian Exp $
+% @(#) $Id: STREAMS.texi,v 0.9.2.39 2007/11/06 10:27:04 brian Exp $
 %
 % =========================================================================
 %
@@ -54,7 +54,7 @@
 % 
 % =========================================================================
 %
-% Last Modified $Date: 2007/08/12 06:44:32 $ by $Author: brian $
+% Last Modified $Date: 2007/11/06 10:27:04 $ by $Author: brian $
 %
 % =========================================================================
 
@@ -420,6 +420,9 @@ package.
 @smallexample
 
 $Log: STREAMS.texi,v $
+Revision 0.9.2.39  2007/11/06 10:27:04  brian
+- miscellaneous corrections
+
 Revision 0.9.2.38  2007/08/12 06:44:32  brian
 - updated licenses in manuals
 
